# mfterm

./: .gitignore  .travis.yml  AUTHORS  INSTALL  Makefile  Makefile.am  README  README.md  autogen.sh  configure.ac  dictionary.c  dictionary.h  dictionary.l  dictionary.txt  dictionary_parser.l  mac.c  mac.h  mfc-spec.txt  mfterm.c  mfterm.h  mfterm.man  mifare.c  mifare.h  mifare_ctrl.c  mifare_ctrl.h  sp_runner.c  spec_parser.y  spec_syntax.c  spec_syntax.h  spec_tokenizer.l  tag.c  tag.h  term_cmd.c  term_cmd.h  util.c  util.h
debian/: changelog  control  copyright  rules
